fixed z-index of carousel

--- a/style.css
+++ b/style.css
@@ -70,12 +70,12 @@ main {
     margin: 30% auto;
     padding-top: 15px;
     padding: 20px;
-    width: 80%;
+    width: 65ch;
     font-size: 1rem;
     margin-inline: 20px;
     line-height: 30px;
     position: fixed;
-    z-index: 1;
+    z-index: 20;
     border-radius: 20px;
 }
 
@@ -522,7 +522,7 @@ a {
 
 .dotButton {
     /* position: absolute; */
-    z-index: 13;
+    z-index: 10;
     display: flex;
     justify-content: space-between;
     width: 5rem;
@@ -688,6 +688,7 @@ form .foot-form button:active {
 
     #presentation {
         height: 80vh;
+        width: 80%;
         overflow-y: auto;
         margin-bottom: 10%;
     }
